tls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taxisbahisdeploy
  labels:
    type: endpoints-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taxisbahisdeploy
  template:
    metadata:
      labels:
        app: taxisbahisdeploy
    spec:
      containers:
      - name: taxisbahisdeploy
        image: gcr.io/innate-beacon-797/taxisbahia
        imagePullPolicy: Always
        ports:
          - name: http
          - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 8080
