tls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esp-srv
  labels:
    type: esp-srv
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30000
  selector:
    app: taxisbahiadeploy
