tls/ingress-taxibahia.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: esp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    type: endpoints-app
spec:
  tls:
  - hosts:
    - taxibahia.cl
    secretName: esp-tls
  rules:
  - host: taxibahia.cl
    http:
      paths:
      - backend:
          serviceName: esp-srv
          servicePort: 8080
